# Logistics-Optimization-System

./: CMakeLists.txt  LogisticsERP  LogisticsSystem  Makefile  README.md  app  main
data/: network_map.csv  truck_db.csv  truck_driver.csv  users_db.csv  warehouse_manager.csv
include/: algorithms.h  data_models.h
src/: allocation.cpp  main.cpp  routing.cpp
web/: auth.js  data.js  driver.html  index.html  input.html  login.html  style.css
